--- a/src/app/shared/dynamic-form/form-controls/form-controls.component.html
+++ b/src/app/shared/dynamic-form/form-controls/form-controls.component.html
@@ -2,20 +2,20 @@
   <div *ngFor="let field of fields" class="form-group">
     <div [ngSwitch]="field.fieldType">
       <div *ngSwitchCase="'select'" class="form-group-wrapper">
-        <!-- <select formControlName="categoryId"
+        <select [formControlName]="field.fieldKey"
         [class.invalid]="getControl(field.fieldKey).touched && getControl(field.fieldKey).invalid"
         [class.valid]="getControl(field.fieldKey).touched && getControl(field.fieldKey).valid">
+          <option [ngValue]="null">Choose a {{ field.fieldLabel | lowercase }}</option>
           <option *ngFor="let option of field.selectOptions" 
             [ngValue]="option.value">{{ option.key }}</option>
-        </select> -->
-        
+        </select>
       </div>
       
       <div *ngSwitchDefault class="form-group-wrapper">
         <input [formControlName]="field.fieldKey" 
         [class.invalid]="getControl(field.fieldKey).touched && getControl(field.fieldKey).invalid"
         [class.valid]="getControl(field.fieldKey).touched && getControl(field.fieldKey).valid"
-        [type]="field.inpuType">
+        [type]="showPassword ? 'text' : field.inpuType">
         
         <label [class.shrink]="getControl(field.fieldKey).value">
           {{ field.fieldLabel }}
@@ -33,7 +33,7 @@
             class="toggle_password_visibility"
             type="button"
             tabindex="-10">
-            <i class="material-icons">visibility</i>
+            <i *ngIf="!showPassword" class="material-icons">visibility</i>
             <i *ngIf="showPassword" class="material-icons">visibility_off</i>
           </button>
         </span>
@@ -44,11 +44,18 @@
       *ngIf="getControl(field.fieldKey).touched && getControl(field.fieldKey)?.errors"
       class="invalid-feedback">
       <p *ngIf="getControl(field.fieldKey).errors.required">
-        Enter your {{ field.fieldLabel }}
+        Enter your {{ field.fieldLabel | lowercase }}
       </p>
 
       <p *ngIf="getControl(field.fieldKey).errors.pattern">
-        Invalid {{ field.fieldLabel }} format
+        Invalid {{ field.fieldLabel | lowercase }} format
+      </p>
+
+      <p *ngIf="getControl(field.fieldKey).errors.minlength">
+        The {{ field.fieldLabel | lowercase }} 
+        can't be less than 
+        {{ getControl(field.fieldKey).errors.minlength.requiredLength }} 
+        characters
       </p>
     </div>
 
