--- a/src/app/shared/dynamic-form/dropdown/dropdown.component.html
+++ b/src/app/shared/dynamic-form/dropdown/dropdown.component.html
@@ -1,6 +1,9 @@
 <div [formGroup]="form" class="form-group">
   <div class="form-group-wrapper">
-    <select [formControlName]="field.fieldKey">
+    <select 
+    [formControlName]="field.fieldKey"
+    [class.invalid]="control.touched && control.invalid"
+    [class.valid]="control.touched && control.valid">
       <option [ngValue]="null">
         Choose a {{ field.fieldLabel | lowercase }}
       </option>
