--- a/src/app/shared/dynamic-form/text-field/text-field.component.html
+++ b/src/app/shared/dynamic-form/text-field/text-field.component.html
@@ -25,5 +25,7 @@
     </span>
   </div>
 
-  
+  <input-feedback
+  [control]="control"
+  [fieldLabel]="field.fieldLabel | lowercase"></input-feedback>
 </div>
