--- a/src/app/shared/dynamic-form/dropdown/dropdown.component.html
+++ b/src/app/shared/dynamic-form/dropdown/dropdown.component.html
@@ -12,5 +12,7 @@
     </select>
   </div>
 
-
+  <input-feedback
+  [control]="control"
+  [fieldLabel]="field.fieldLabel | lowercase"></input-feedback>
 </div>
