--- a/src/app/shared/dynamic-form/text-field/text-field.component.html
+++ b/src/app/shared/dynamic-form/text-field/text-field.component.html
@@ -27,5 +27,6 @@
 
   <input-feedback
   [control]="control"
-  [fieldLabel]="field.fieldLabel | lowercase"></input-feedback>
+  [fieldLabel]="field.fieldLabel | lowercase"
+  [customs]="field.inputFeedback"></input-feedback>
 </div>
