--- a/src/app/shared/dynamic-form/input-feedback/input-feedback.component.html
+++ b/src/app/shared/dynamic-form/input-feedback/input-feedback.component.html
@@ -23,8 +23,10 @@
   </p>
 </div>
 
-<div *ngIf="custom?.condition" class="invalid-feedbac">
-  <p>{{ custom.feedback }}</p>
+<div *ngIf="control.touched && customs" class="invalid-feedbac">
+  <div *ngFor="let custom of customs">
+    <p *ngIf="custom.condition">{{ custom.feedback }}</p>
+  </div>
 </div>
 
 <!-- <div *ngIf="control.valid" class="valid-feedback">
