--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -2,6 +2,9 @@
   <div class="wrapper-l">
     <h1>NOT FOUND - 404</h1>
 
+    <button 
+      (click)="baGenderChoice = !baGenderChoice"
+      class="btn-xl-filled">Click me</button>
 
     <dynamic-form (onSubmit)="onSubmit($event)"></dynamic-form>
 
