--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -3,10 +3,12 @@
     <h1>NOT FOUND - 404</h1>
 
     <button 
-      (click)="baGenderChoice = !baGenderChoice"
+      (click)="onClick()"
       class="btn-xl-filled">Click me</button>
 
-    <dynamic-form (onSubmit)="onSubmit($event)"></dynamic-form>
+    <dynamic-form 
+    (onSubmit)="onSubmit($event)"
+    [specialFeedback]="{ fieldOrder: 6, condition: badGenderChoice}"></dynamic-form>
 
 
   </div>
