--- a/src/app/shared/dynamic-form/text-field/text-field.component.html
+++ b/src/app/shared/dynamic-form/text-field/text-field.component.html
@@ -24,4 +24,9 @@
       </button>
     </span>
   </div>
+
+  <input-feedback
+  [control]="control"
+  [field]="field"
+  [specialFeedback]="specialFeedback"></input-feedback>
 </div>
