--- a/src/app/shared/dynamic-form/dropdown/dropdown.component.html
+++ b/src/app/shared/dynamic-form/dropdown/dropdown.component.html
@@ -11,4 +11,9 @@
         [ngValue]="option.value">{{ option.key }}</option>
     </select>
   </div>
+
+  <input-feedback
+  [control]="control"
+  [field]="field"
+  [specialFeedback]="specialFeedback"></input-feedback>
 </div>
