--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -7,8 +7,7 @@
       class="btn-xl-filled">Click me</button>
 
     <dynamic-form 
-    (onSubmit)="onSubmit($event)"
-    [specialFeedback]="{ fieldOrder: 6, condition: badGenderChoice}"></dynamic-form>
+    (onSubmit)="onSubmit($event)"></dynamic-form>
 
 
   </div>
