--- a/src/app/shared/dynamic-form/dropdown/dropdown.component.html
+++ b/src/app/shared/dynamic-form/dropdown/dropdown.component.html
@@ -12,8 +12,8 @@
     </select>
   </div>
 
-  <input-feedback
+  <!-- <input-feedback
   [control]="control"
   [field]="field"
-  [specialFeedback]="specialFeedback"></input-feedback>
+  [specialFeedback]="specialFeedback"></input-feedback> -->
 </div>
