--- a/src/app/shared/dynamic-form/text-field/text-field.component.html
+++ b/src/app/shared/dynamic-form/text-field/text-field.component.html
@@ -25,8 +25,8 @@
     </span>
   </div>
 
-  <input-feedback
+  <!-- <input-feedback
   [control]="control"
   [field]="field"
-  [specialFeedback]="specialFeedback"></input-feedback>
+  [specialFeedback]="specialFeedback"></input-feedback> -->
 </div>
