--- a/src/app/shared/dynamic-form/dynamic-form.component.html
+++ b/src/app/shared/dynamic-form/dynamic-form.component.html
@@ -6,17 +6,22 @@
 
     <div *ngFor="let field of fields">
       <div [ngSwitch]="field.fieldType" class="form-group">
-        <dropdown 
-        *ngSwitchCase="'select'" 
-        [form]="form" 
-        [field]="field"
-        [specialFeedback]="specialFeedback"></dropdown>
+        <dropdown *ngSwitchCase="'select'" 
+        [form]="form" [field]="field"></dropdown>
 
-        <text-field 
-        *ngSwitchDefault 
-        [form]="form" 
-        [field]="field"
-        [specialFeedback]="specialFeedback"></text-field>
+        <text-field *ngSwitchDefault 
+        [form]="form" [field]="field"></text-field>
+
+        
+
+        <!-- <div 
+        *ngIf="control(field.fieldKey).touched && 
+        !control(field.fieldKey).errors && 
+        field.customFeedback && 
+        field.fieldOrder == specialFeedback.fieldOrder &&
+        specialFeedback.condition" class="invalid-feedback">
+          <p>{{ field.customFeedback }}</p>
+        </div> -->
 
       </div>
     </div>
