--- a/src/app/shared/dynamic-form/dynamic-form.component.html
+++ b/src/app/shared/dynamic-form/dynamic-form.component.html
@@ -17,8 +17,9 @@
       </div>       -->
 
       <text-field
-        
-        ></text-field>
+        *ngSwitchDefault
+        [form]="form"
+        [field]="field"></text-field>
     </div>
 
     <div class="action-buttons">
