--- a/src/app/shared/dynamic-form/text-field/text-field.component.html
+++ b/src/app/shared/dynamic-form/text-field/text-field.component.html
@@ -1,4 +1,4 @@
-<!-- <div [formGroup]="form">
+<div [formGroup]="form">
   <div class="form-group-wrapper">
     <input
     [formControlName]="field.fieldKey"
@@ -29,4 +29,4 @@
   [control]="control"
   [field]="field"
   [specialFeedback]="specialFeedback"></input-feedback>
-</div> -->
+</div>
