--- a/src/app/shared/dynamic-form/dynamic-form.component.html
+++ b/src/app/shared/dynamic-form/dynamic-form.component.html
@@ -19,10 +19,9 @@
         [form]="form"
         [field]="field"></text-field>
 
-      <input-feedback
+      <!-- <input-feedback
         [control]="form.get(field.fieldKey)"
-        [field]="field"
-        [specialFeedback]=""></input-feedback>
+        [field]="field"></input-feedback> -->
     </div>
 
     <div class="action-buttons">
