--- a/src/app/shared/dynamic-form/dynamic-form.component.html
+++ b/src/app/shared/dynamic-form/dynamic-form.component.html
@@ -14,6 +14,11 @@
         [form]="form"
         [field]="field"></dynamic-dropdown>
 
+      <dynamic-textarea
+        *ngSwitchCase="'textarea'"
+        [form]="form"
+        [field]="field"></dynamic-textarea>
+
       <dynamic-text-field
         *ngSwitchDefault
         [form]="form"
