--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -7,6 +7,7 @@
       class="btn-xl-filled">Click me</button>
 
     <dynamic-form 
+    [width]="'600px'"
     [fields]="fields"
     (onSubmit)="onSubmit($event)"></dynamic-form>
 
