--- a/src/app/shared/dynamic-form/dynamic-form.component.html
+++ b/src/app/shared/dynamic-form/dynamic-form.component.html
@@ -2,7 +2,8 @@
   <form 
     [formGroup]="form" 
     (ngSubmit)="onSubmit()" 
-    id="dynamicForm">
+    id="dynamicForm"
+    [style.maxWidth]="width">
 
     <div 
       *ngFor="let field of fields"
