--- a/src/app/shared/dynamic-form/dynamic-form.component.scss
+++ b/src/app/shared/dynamic-form/dynamic-form.component.scss
@@ -1,7 +1,5 @@
 #dynamicForm {
-  
-  padding: 5rem; // temp
-  margin: 5rem auto; // temp
+  width: auto;
   background-color: #fff;
 
   .action-buttons {
@@ -20,6 +18,7 @@
   width: 100%;
   height: auto;
   margin-bottom: 1.5rem;
+  background-color: inherit;
 
   &-wrapper {
     position: relative;
@@ -27,6 +26,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 1rem 0 0;
+    background-color: inherit;
 
     input, select, textarea {
       position: relative;
@@ -59,7 +59,7 @@
       position: absolute;
       left: 0;
       top: calc(100% - 0.9rem - 1px - 0.5rem);
-      font-size: 0.95rem;
+      font-size: 0.9rem;
       transition: 0.2s ease;
       user-select: none;
 
@@ -75,7 +75,7 @@
       right: 0;
       width: 50px;
       height: calc(100% - 17px);
-      background: linear-gradient(90deg, transparent, #fff 40%);
+      background-color: #fff;
       z-index: 5;
 
       .material-icons {
