--- a/src/app/shared/dynamic-form/text-field/text-field.component.html
+++ b/src/app/shared/dynamic-form/text-field/text-field.component.html
@@ -2,7 +2,8 @@
   <div class="form-group-wrapper">
     <input
     [formControlName]="field.fieldKey"
-    [class.invalid]="control.touched && control.invalid"
+    [class.invalid]="(control.touched && control.invalid) || 
+    (control.touched && field.customFeedback.condition)"
     [class.valid]="control.touched && control.valid"
     [type]="showPassword ? 'text' : field.inpuType">
     <label [class.shrink]="control.value">{{ field.fieldLabel }}</label>
