--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -284,7 +284,7 @@
       width: 100%;
     }
 
-    .login-form-column #loginForm {
+    .login-form-column dynamic-form {
       margin: auto;
     }
 
@@ -316,7 +316,7 @@
 @media (max-width: 600px) {
   .login-section {
     
-    .login-form-column #loginForm {
+    .login-form-column dynamic-form {
       width: 100%;
     }
   }
