--- a/src/app/shared/dynamic-form/text-field/text-field.component.html
+++ b/src/app/shared/dynamic-form/text-field/text-field.component.html
@@ -3,7 +3,7 @@
     <input
     [formControlName]="field.fieldKey"
     [class.invalid]="(control.touched && control.invalid) || 
-    (control.touched && field.customFeedback.condition)"
+    (control.touched && field?.customFeedback?.condition)"
     [class.valid]="control.touched && control.valid"
     [type]="showPassword ? 'text' : field.inpuType">
     <label [class.shrink]="control.value">{{ field.fieldLabel }}</label>
