--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -9,10 +9,10 @@
         <i class="material-icons">navigate_before</i>
       </button>
 
-      <a class="logo">
+      <span class="logo">
         <span>A</span>
         <span>rmazon</span>
-      </a>
+      </span>
     </div>
 
     <div class="middle-content">
@@ -29,76 +29,14 @@
   </div>
 
   <div class="login-form-column">
-    <!-- <form 
-      [formGroup]="loginForm" 
-      (ngSubmit)="onSubmit()" 
-      id="loginForm">
-      <div class="form-group">
-        <div class="form-group-wrapper">
-          <input formControlName="username" type="text">
-          <label [class.shrink]="username.valid">
-            Username or email address
-          </label>
-        </div>
-
-        <div 
-          *ngIf="username.touched && username.invalid &&
-          !loginState?.error.username"
-          class="invalid-feedback">
-          <p *ngIf="username?.errors.required">
-            Enter your username or email
-          </p>
-        </div>
-
-        <div 
-          *ngIf="username.touched && loginState?.error.username" 
-          class="invalid-feedback">
-          <p>{{ loginState?.message }}</p>
-        </div>
-      </div>
-  
-      <div class="form-group">
-        <div class="form-group-wrapper">
-          <input formControlName="password" 
-            [type]="!showPassword ? 'password' : 'text'">
-          <label [class.shrink]="password.valid">Password</label>
-
-          <button 
-            (click)="showPassword = !showPassword"
-            class="toggle_password_visibility"
-            type="button">
-            <i *ngIf="!showPassword" class="material-icons">visibility</i>
-            <i *ngIf="showPassword" class="material-icons">visibility_off</i>
-          </button>
-        </div>
-
-        <div 
-          *ngIf="password.touched && password?.errors &&
-          !loginState?.error.password"
-          class="invalid-feedback">
-          <p *ngIf="password?.errors.required">
-            Enter your password
-          </p>
-        </div>
-
-        <div 
-          *ngIf="password.touched && loginState?.error.password" 
-          class="invalid-feedback">
-          <p>{{ loginState?.message }}</p>
-        </div>
-      </div>
-  
-      <div class="action-buttons">
-        <button class="btn-xl-filled login-btn">Log In</button>
-        <button 
-          routerLink="../signup" 
-          class="btn-xl signup-btn">Create Account</button>
-      </div>
-    </form> -->
-    
-    <!-- <dynamic-form 
-    [fields]="fields"
-    (onSubmit)="onSubmit($event)"></dynamic-form> -->
+    <div class="form-wrapper">
+      <dynamic-form 
+      [fields]="fields"
+      (onSubmit)="onSubmit($event)"></dynamic-form>
+      <button 
+        routerLink="../signup" 
+        class="btn-xl signup-btn">Create Account</button>
+    </div>
   </div>
 
   <app-spinner [loading]="isLoading"></app-spinner>
