--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -172,104 +172,13 @@
     height: 100%;
     padding: 5rem;
     transition: width .3s ease;
-    
-    #loginForm {
+   
+    .form-wrapper {
       width: 400px;
-      height: auto;
       transition: inherit;
-    
-      .form-group {
-        position: relative;
+
+      .signup-btn {
         width: 100%;
-        height: auto;
-  
-        &:not(:last-of-type) {
-          margin-bottom: 1.5rem;
-        }
-
-        &-wrapper {
-          position: relative;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          padding: 1rem 0 0;
-
-          input {
-            position: relative;
-            width: 100%;
-            padding: 0.25rem 0;
-            border-bottom: thin solid #c7cad8;
-            transition: background-color .4s ease,
-            border-color .4s ease;
-            z-index: 1;
-            
-            &:focus {
-              border-color: #F72551;
-  
-              & + label {
-                top: 0;
-                font-size: 0.75rem;
-              }
-            }
-          }
-  
-          label {
-            position: absolute;
-            left: 0;
-            top: calc(100% - 0.9rem - 1px - 0.5rem);
-            font-size: 0.95rem;
-            transition: 0.2s ease;
-            user-select: none;
-  
-            &.shrink {
-              top: 0;
-              font-size: 0.75rem;
-            }
-          } 
-  
-          .toggle_password_visibility {
-            position: absolute;
-            top: 1rem;
-            right: 0;
-            width: 50px;
-            height: calc(100% - 17px);
-            background: linear-gradient(90deg, transparent, #fff 40%);
-            z-index: 5;
-  
-            .material-icons {
-              margin-left: auto;
-              font-size: 1.3rem;
-            }
-          }   
-        }   
-        
-        .invalid-feedback {
-          position: absolute;
-          left: 0;
-          bottom: -1.2rem;
-          display: block;
-          width: 100%;
-          animation: slideUp 0.2s ease;
-
-          p {
-            color: #ff2d2d;
-            font-size: 0.8rem;
-          }
-        }
-      }
-
-      .action-buttons {
-        width: 100%;
-        margin-top: 3rem;
-
-        .login-btn,
-        .signup-btn {
-          width: 100%;
-        }
-
-        .login-btn {
-          margin-bottom: 1.5rem;
-        }
       }
     }
   } 
@@ -284,7 +193,7 @@
       width: 100%;
     }
 
-    .login-form-column dynamic-form {
+    .login-form-column .form-wrapper {
       margin: auto;
     }
 
@@ -316,7 +225,7 @@
 @media (max-width: 600px) {
   .login-section {
     
-    .login-form-column dynamic-form {
+    .login-form-column .form-wrapper {
       width: 100%;
     }
   }
