--- a/src/app/shared/dynamic-form/input-feedback/input-feedback.component.html
+++ b/src/app/shared/dynamic-form/input-feedback/input-feedback.component.html
@@ -29,6 +29,6 @@
   <p>{{ field.customFeedback.message }}</p>
 </div>
 
-<!-- <div *ngIf="control.valid" class="valid-feedback">
+<!-- <div *ngIf="field.fieldType == 'email' && control.valid" class="valid-feedback">
   <p>Available! <i class="material-icons">done</i></p>
 </div> -->
