--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -1,6 +1,20 @@
 .container {
+  position: relative;
   width: 100%;
-  min-height: 100%;
+  min-height: calc(100vh - 46px);
   padding: 70px 1rem 0;
+  margin-top: 46px;
   animation: reveal .4s ease;
+  background: #fff url('../../assets/img/404-background.webp') 
+  center center/cover no-repeat;
+  
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+  }
 }
