--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,20 @@
 <section class="container">
-  
+  <div class="content">
+    <span class="logo">
+      <span>A</span>
+      <span>rmazon</span>
+    </span>
+
+    <h1>404 Page not found</h1>
+
+    <button routerLink="/" class="btn-xl">Go to home</button>
+  </div>
+
+  <div class="bottom-content">
+    <p>
+      Armazon.do - <a href="#">Cookie Policy</a> and 
+      <a href="#">Privacy Policy</a>
+    </p>
+    <p>&copy; Armazon by Adison P. Martínez 2019-{{ currentYear }}</p>
+  </div>
 </section>
