--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -1,12 +1,26 @@
 .container {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  min-height: calc(100vh - 46px);
-  padding: 70px 1rem 0;
-  margin-top: 46px;
+  min-height: 100vh;
+  padding: 70px 2rem 5rem;
   animation: reveal .4s ease;
   background: #fff url('../../assets/img/404-background.webp') 
   center center/cover no-repeat;
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 0;
+  }
   
   &::after {
     content: '';
@@ -15,6 +29,95 @@
     top: 0;
     width: 100%;
     height: 100%;
+    background-image: 
+    linear-gradient(60deg, rgba(247, 37, 83, 0.5), rgba(46, 140, 184, 0.5));
+    z-index: 1;
+  }
 
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    margin-top: 15rem;
+    z-index: 10;
+
+    .logo {
+      display: flex;
+      margin-bottom: 7rem;
+      align-items: center;
+      text-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+      user-select: none;
+      overflow: hidden;
+  
+      span:first-of-type {
+        margin-right: 0.5rem;
+        color: #e6e9f0;
+        font-size: 2rem;
+        font-weight: 300;
+        border-radius: 100px;
+      }
+  
+      span:last-of-type {
+        color: #e6e9f0;
+        padding: 0.1rem 0.7rem;
+        font-size: 1rem;
+        border-left: thin solid #fff;
+      }
+    }
+
+    h1 {
+      position: relative;
+      display: block;
+      width: fit-content;
+      margin-bottom: 2rem;
+      padding-bottom: 1.5rem;
+      color: #e6e9f0;
+      font-size: 5rem;
+      font-weight: 300;
+      text-align: center;
+      text-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+
+      &::before {
+        content: '';
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translate(-50%);
+        width: 5%;
+        border-bottom: thin solid rgba(230, 233, 240, 0.4);
+      }
+    }
+
+    button {
+      color: #e6e9f0;
+      border: none;
+      background-color: rgba(230, 233, 240, 0.2);
+      transition: background-color .4s ease,
+      border .4s ease;
+      
+      &:hover {
+        background-color: rgba(230, 233, 240, 0.4);
+      }
+    }
+  }
+
+  .bottom-content {
+    position: relative;
+    max-width: 300px;
+    margin-top: auto;
+    z-index: 10;
+
+    a {
+      color: #e6e9f0;
+      text-decoration: underline;
+    }
+
+    p {
+      color: #e6e9f0;
+      font-size: 0.7rem;
+      font-weight: 300;
+      line-height: 1.2rem;
+    }
   }
 }
