--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -30,7 +30,11 @@
     width: 100%;
     height: 100%;
     background-image: 
-    linear-gradient(60deg, rgba(247, 37, 83, 0.5), rgba(46, 140, 184, 0.5));
+    linear-gradient(
+      60deg, 
+      rgba(247, 37, 83, 0.5), 
+      rgba(46, 175, 184, 0.5)
+    );
     z-index: 1;
   }
 
