--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -5,7 +5,7 @@
       <span>rmazon</span>
     </span>
 
-    <h1>404 Page not found</h1>
+    <h1>404 - Page not found</h1>
 
     <button routerLink="/" class="btn-xl">Go to home</button>
   </div>
