--- a/src/app/shared/dynamic-form/text-field/text-field.component.html
+++ b/src/app/shared/dynamic-form/text-field/text-field.component.html
@@ -1,28 +1,25 @@
-<div [formGroup]="form">
-  <div class="form-group-wrapper">
-    <input
-    [formControlName]="field.fieldKey"
-    [class.invalid]="(control.touched && control.invalid) || 
-    (control.touched && field?.customFeedback?.condition)"
-    [class.valid]="control.touched && control.valid"
-    [type]="showPassword ? 'text' : field.inpuType">
-    <label [class.shrink]="control.value">{{ field.fieldLabel }}</label>
-  
-    <div *ngIf="control.pending" class="loader">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  
-    <span *ngIf="field.inpuType == 'password'">
-      <button 
-        (click)="showPassword = !showPassword"
-        class="toggle_password_visibility"
-        type="button"
-        tabindex="-10">
-        <i *ngIf="!showPassword" class="material-icons">visibility</i>
-        <i *ngIf="showPassword" class="material-icons">visibility_off</i>
-      </button>
-    </span>
+<div [formGroup]="form" class="form-group-wrapper">
+  <input
+  [formControlName]="field.fieldKey"
+  [class.invalid]="(control.touched && control.invalid)"
+  [class.valid]="control.touched && control.valid"
+  [type]="showPassword ? 'text' : field.inpuType">
+  <label [class.shrink]="control.value">{{ field.fieldLabel }}</label>
+
+  <div *ngIf="control.pending" class="loader">
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
+
+  <span *ngIf="field.inpuType == 'password'">
+    <button 
+      (click)="showPassword = !showPassword"
+      class="toggle_password_visibility"
+      type="button"
+      tabindex="-10">
+      <i *ngIf="!showPassword" class="material-icons">visibility</i>
+      <i *ngIf="showPassword" class="material-icons">visibility_off</i>
+    </button>
+  </span>
 </div>
