--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,4 +1,11 @@
 <section class="container">
+  <div class="background">
+    <img 
+      image-loader 
+      src="assets/img/404-background.webp"
+      draggable="false">
+  </div>
+
   <div class="content">
     <span class="logo">
       <span>A</span>
