--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -8,8 +8,23 @@
   min-height: 100vh;
   padding: 70px 2rem 3rem;
   animation: reveal .4s ease;
-  background: #fff url('../../assets/img/404-background.webp') 
-  center center/cover no-repeat;
+
+  .background {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    user-select: none;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
+    }
+  }
 
   &::before {
     content: '';
@@ -32,8 +47,10 @@
     background-image: 
     linear-gradient(
       60deg, 
-      rgba(247, 37, 83, 0.5), 
-      rgba(46, 175, 184, 0.5)
+      rgba(0, 0, 0, 0.6),
+      rgba(247, 37, 83, 0.4), 
+      rgba(46, 175, 184, 0.3),
+      rgba(0, 0, 0, 0.6)
     );
     z-index: 1;
   }
@@ -43,8 +60,9 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    margin-top: 15rem;
+    margin: auto 0;
     z-index: 10;
+    transition: inherit;
 
     .logo {
       display: flex;
@@ -79,8 +97,10 @@
       color: #e6e9f0;
       font-size: 5rem;
       font-weight: 300;
+      line-height: 6.5rem;
       text-align: center;
       text-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+      transition: width 0.3s ease, font-size .3s ease;
 
       &::before {
         content: '';
@@ -123,6 +143,19 @@
       font-size: 0.7rem;
       font-weight: 300;
       line-height: 1.2rem;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+
+    .content {
+  
+      h1 {
+        font-size: 4rem;
+        line-height: 5rem;
+      }
     }
   }
 }
