--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -22,6 +22,10 @@
       Armazon.do - <a href="#">Cookie Policy</a> and 
       <a href="#">Privacy Policy</a>
     </p>
-    <p>&copy; Armazon by Adison P. Martínez 2019-{{ currentYear }}</p>
+    <p>
+      &copy; Armazon by Adison P. Martínez 2019-{{ currentYear }}
+      
+      
+    </p>
   </div>
 </section>
