--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
       </button>
   
       <button (click)="openCart()" class="cart-btn nav-btn" type="button">
-        <i class="material-icons">shopping_cart</i>
+        <i class="fas fa-shopping-bag"></i>
         <span *ngIf="itemCount" class="badge">
           {{ itemCount }}
         </span>
