--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -25,7 +25,7 @@
     <p>
       &copy; Armazon by Adison P. Martínez 2019-{{ currentYear }}
       
-      
+      <i class="fab fa-github"></i>
     </p>
   </div>
 </section>
