--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -45,7 +45,7 @@
           <button 
             (click)="onAddToCart(product.productId)"
             type="button" class="add-to-cart-btn" title="Add to Cart">
-            <i class="material-icons">add_shopping_cart</i>
+            <i class="material-icons">favorite_border</i>
           </button>
         </div>
       </li>
