--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -17,7 +17,7 @@
     <button routerLink="/" class="btn-xl">Go to home</button>
   </div>
 
-  <div class="bottom-content">
+  <footer class="footer">
     <p>
       Armazon.do - <a href="#">Cookie Policy</a> and 
       <a href="#">Privacy Policy</a>
@@ -25,7 +25,9 @@
     <p>
       &copy; Armazon by Adison P. Martínez 2019-{{ currentYear }}
       
-      <i class="fab fa-github"></i>
+      <a href="https://github.com/hirayoki22" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
     </p>
-  </div>
+  </footer>
 </section>
