--- a/src/app/shared/dynamic-form/textarea/textarea.component.html
+++ b/src/app/shared/dynamic-form/textarea/textarea.component.html
@@ -3,7 +3,7 @@
     <textarea
     [formControlName]="field.fieldKey"
     [class.invalid]="control.touched && control.invalid"
-    [class.valid]="control.touched && control.valid"
+    [class.valid]="enableValidCSS && control.dirty && control.valid"
     rows="5"></textarea>
     <label [class.shrink]="control.value">{{ field.fieldLabel }}</label>
   </div>
