--- a/src/app/shared/dynamic-form/input-feedback/input-feedback.component.html
+++ b/src/app/shared/dynamic-form/input-feedback/input-feedback.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div>
-    <p *ngIf="control.errors.pattern">
+    <p *ngIf="control.errors.pattern || control.errors.email">
       Invalid {{ label }} format
     </p>
   </div>
@@ -34,11 +34,14 @@
   </div>
 </span>
 
-<span *ngIf="control.dirty && field?.customFeedback?.condition" 
+<span 
+  *ngIf="control.dirty && field?.customFeedback?.condition" 
   class="invalid-feedback">
   <p>{{ field.customFeedback.message }}</p>
 </span>
 
-<!-- <span *ngIf="field.fieldType == 'email' && control.valid" class="valid-feedback">
+<span 
+  *ngIf="field.validators.async && control.valid" 
+  class="valid-feedback">
   <p>Available! <i class="material-icons">done</i></p>
-</span> -->
+</span>
