--- a/src/app/shared/dynamic-form/dynamic-form.component.html
+++ b/src/app/shared/dynamic-form/dynamic-form.component.html
@@ -21,9 +21,7 @@
         *ngSwitchDefault
         [field]="field"></dynamic-text-field>
 
-      <input-feedback
-        [control]="form.get(field.fieldKey)"
-        [field]="field"></input-feedback>
+      <input-feedback [field]="field"></input-feedback>
     </div>
 
     <div class="action-buttons">
